force-app/main/default/objects/Order_Line_Item__c/fields/Partner_Order__c.field-meta.xml
<CustomField>
    <fullName>Partner_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Order</label>
    <referenceTo>Partner_Order__c</referenceTo>
    <relationshipName>LineItems</relationshipName>
    <type>Lookup</type>
</CustomField>